--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ a{
     font-family:'Fixedsys62';
 }
 
+/* Header_section */
+
 header{
     width: 100%;
     padding-top: 24px;
@@ -45,4 +47,45 @@ nav .main_nav:last-child{
     color: #ffffff;
     font-size: 32px;
     margin: 16px 0px;
+}
+
+/* hero_section */
+.hero_section{
+    width:1392px;
+    height: 722px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.hero_text{
+    text-align: center;
+    width: 1200px;
+    height: 144px;
+    margin: 0 auto;
+    font-size: 72px;
+    color: #ffffff;
+    margin-top: 264px;
+}
+
+.hero_subtext{
+    text-align: center;
+    padding-top: 30px;
+    color: rgba(250, 250, 250, 0.64);
+    font-size: 30px;
+    width: 1200px;
+    height: 34px;
+    margin: 0 auto;
+    padding-bottom: 80px;
+}
+
+.header_btn{
+    width: 192px;
+    height: 56px;
+    display: flex;
+    background-color: #ffffff;
+    color: #0009AF;
+    font-size: 24px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
 }
