--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* General_styles */
+
 @font-face {
     font-family: 'Fixedsys62';
     src: url('Fixedsys62.ttf') format('truetype');
@@ -7,23 +9,48 @@ a{
     text-decoration: none;
     color: rgba(250, 250, 250, 0.64);
 }
+
+h2{
+    color: #ffffff;
+    font-size: 40px;
+    margin-bottom: 0;
+}
+
+.btn{
+    width: 192px;
+    height: 56px;
+    display: flex;
+    font-size: 24px;
+    justify-content: center;
+    align-items: center;
+}
+
+p{
+    font-size: 30px;
+}
+
+/* Container */
 .container{
     background-color: #0009AF;
     font-family:'Fixedsys62';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Header_section */
 
 header{
-    width: 100%;
     padding-top: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 nav {
     display: flex;
-    max-width: 1392px;
+    width: 1392px;
     height: 64px;
-    margin: 0 auto;
     justify-content: space-between;
     padding: 0 96px;
 }
@@ -36,7 +63,6 @@ nav .main_nav:last-child{
     width: 232px;
     height: 16px;
     margin-top: 28px;
-
 }
 
 .main_nav a:first-child{
@@ -53,39 +79,59 @@ nav .main_nav:last-child{
 .hero_section{
     width:1392px;
     height: 722px;
-    margin: 0 auto;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hero_text{
     text-align: center;
     width: 1200px;
     height: 144px;
-    margin: 0 auto;
     font-size: 72px;
     color: #ffffff;
-    margin-top: 264px;
+    margin: 264px 0 0 0;
 }
 
 .hero_subtext{
     text-align: center;
-    padding-top: 30px;
+    margin: 30px 0 0 0;
     color: rgba(250, 250, 250, 0.64);
-    font-size: 30px;
     width: 1200px;
-    height: 34px;
-    margin: 0 auto;
-    padding-bottom: 80px;
 }
 
-.header_btn{
-    width: 192px;
-    height: 56px;
-    display: flex;
+.main_cta{
     background-color: #ffffff;
     color: #0009AF;
-    font-size: 24px;
-    justify-content: center;
+    margin-top: 80px;
+}
+
+/* Second_section */
+
+.section2{
+    width: 1392px;
+    height: 548px;
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    margin: 0 auto;
+}
+
+.section2_heading{
+    width: 1200px;
+    text-align: center;
+    margin-top: 120px;
+}
+
+.section2_subtext{
+    text-align: center;
+    width: 1200px;
+    color: rgba(250, 250, 250, 0.64);
+    margin: 24px 0 0 0;
+}
+
+.secondary_cta{
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    margin-top: 40px;
 }
