--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ h2{
     margin-bottom: 0;
 }
 
+h5{
+    margin: 40px auto 0px 96px;
+    font-size: 16px;
+    color: #ffffff;
+}
+
 .btn{
     width: 192px;
     height: 56px;
@@ -26,9 +32,20 @@ h2{
 }
 
 p{
-    font-size: 30px;
+    font-size: 24px;
 }
 
+.img_bx{
+    margin: 64px 40px auto 96px;
+    min-width: 480px;
+    height: 480px;
+}
+
+.txt_bx{
+    width: 680px;
+    height: 234px;
+    margin-top: 187px;
+}
 /* Container */
 .container{
     background-color: #0009AF;
@@ -51,8 +68,7 @@ nav {
     display: flex;
     width: 1392px;
     height: 64px;
-    justify-content: space-between;
-    padding: 0 96px;
+    justify-content: space-around;
 }
 
 nav .main_nav:last-child{
@@ -134,4 +150,27 @@ nav .main_nav:last-child{
     border: 2px solid #ffffff;
     color: #ffffff;
     margin-top: 40px;
+}
+
+/* Third_section */
+.section3{
+    width: 1392px;
+    height: 720px;
+}
+
+.card-container{
+    position: relative;
+}
+
+.card{
+    position: absolute;
+}
+
+.card_title{
+    margin-top: 0px;
+}
+
+.card_p{
+    margin: 34px 0 0 0;
+    color: rgba(250, 250, 250, 0.64);
 }
