--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ a{
     color: rgba(250, 250, 250, 0.64);
 }
 
+h1{
+    font-size: 72px;
+}
+
 h2{
     color: #ffffff;
     font-size: 40px;
@@ -46,6 +50,14 @@ p{
     height: 234px;
     margin-top: 187px;
 }
+
+.slideshow_1, .slideshow_2{
+    margin-left: 96px;
+    height: 72px;
+    width: 1200px;
+    overflow: hidden;
+  }
+
 /* Container */
 .container{
     background-color: #0009AF;
@@ -104,7 +116,6 @@ nav .main_nav:last-child{
     text-align: center;
     width: 1200px;
     height: 144px;
-    font-size: 72px;
     color: #ffffff;
     margin: 264px 0 0 0;
 }
@@ -156,15 +167,48 @@ nav .main_nav:last-child{
 .section3{
     width: 1392px;
     height: 720px;
+    margin-top: 40px;
 }
 
 .card-container{
     position: relative;
+    height: 480px;
+    overflow-y: hidden;
 }
 
 .card{
     position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    animation: slideUp 5s linear infinite;
 }
+
+.card-1-container {
+    animation: slideUp 5s linear infinite;
+    animation-delay: 2s;
+}
+
+.card-2-container {
+    animation: slideUp 5s linear infinite;
+    animation-delay: 4s;
+}
+
+.card-3-container {
+    animation: slideUp 5s linear infinite;
+    animation-delay: 6s;
+}
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(100%);
+    }
+  100% {
+transform: translateY(-100%);
+}
+}
+
 
 .card_title{
     margin-top: 0px;
@@ -174,3 +218,97 @@ nav .main_nav:last-child{
     margin: 34px 0 0 0;
     color: rgba(250, 250, 250, 0.64);
 }
+
+/* Services_section */
+.services{
+    width: 1392px;
+    height:424px;
+    margin-top: 40px;
+}
+
+  @-webkit-keyframes list {
+    0% {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      visibility: visible;
+    }
+    100% {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
+  @keyframes list {
+    0% {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      visibility: visible;
+    }
+    100% {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
+
+  @-webkit-keyframes reverse {
+    0% {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+      visibility: visible;
+    }
+    100% {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  @keyframes reverse {
+    0% {
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+        visibility: visible;
+      }
+      100% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+      }
+  }
+
+  .slideshow_1 {
+    margin-top: 64px;
+  }
+
+  .slideshow_2{
+    margin-top: 40px;
+  }
+  .slideshow_1 .list, .slideshow_2 .reverse {
+    padding-left: 100%;
+    display: inline-block;
+    white-space: nowrap;
+    padding-right: 100%;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+  }
+
+  .slideshow_1 .list:hover,
+  .slideshow_2 .reverse:hover{
+        animation-play-state: paused;
+  }
+
+  .slideshow_1 .list{
+    -webkit-animation-name: list;
+    animation-name: list;
+    -webkit-animation-duration: 15s;
+    animation-duration: 15s;
+  }
+
+  .slideshow_2 .reverse{
+    -webkit-animation-name: reverse;
+    animation-name: reverse;
+    -webkit-animation-duration: 18s;
+    animation-duration: 18s;
+  }
+  .slideshow_1 .list .list_item,
+  .slideshow_2 .reverse .list_item {
+    display: inline;
+  }
