--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ nav {
     display: flex;
     width: 1392px;
     height: 64px;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 nav .main_nav:last-child{
@@ -179,27 +179,50 @@ nav .main_nav:last-child{
 }
 
 /* Third_section */
-/* .section3{
+.section3{
     width: 1392px;
-    height: 720px;
+    height: 100vh;
     margin-top: 40px;
 }
 
 .card-container{
     position: relative;
     height: 480px;
-    overflow-y: hidden;
 }
-
 .card{
     position: absolute;
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-wrap: nowrap;
-    animation: slideUp 5s linear infinite;
+    display: none;
 }
-
+.card.active{
+    display: flex;
+    align-items: center;
+}
+.animateAdd{
+    animation: animationAdd 500ms linear;
+}
+.removeAnimation{
+    animation: removeAnimation 500ms linear;
+    display: flex;
+}
+@keyframes removeAnimation {
+    0%{
+        transform: translate(0, 0);
+    }
+    100%{
+        transform: translate(0, -100px);
+    }
+}
+@keyframes animationAdd{
+    0%{
+        transform: translate( 0, 100px);
+    }
+    100%{
+        transform: translate(0, 0);
+    }
+}
+/* 
 .card-1-container {
     animation: slideUp 5s linear infinite;
     animation-delay: 2s;
@@ -224,7 +247,7 @@ transform: translateY(-100%);
 }
 }
 
-
+ */
 .card_title{
     margin-top: 0px;
 }
@@ -232,8 +255,10 @@ transform: translateY(-100%);
 .card_p{
     margin: 34px 0 0 0;
     color: rgba(250, 250, 250, 0.64);
-} */
-
+}
+.txt_bx{
+    margin: 0;
+}
 /* Services_section */
 .services{
     width: 1392px;
@@ -391,12 +416,14 @@ form h1{
     font-size: 72px;
 }
 form input{
+    box-sizing: border-box;
     margin: 10px 0;
     width: 640px;
     outline: none;
     height: 56px;
+    color: white;
     font-size: 24px;
-    padding: 16px, 24px, 16px, 24px;
+    padding-left: 24px;
     background-color: inherit;
     border: 2px solid white;
 }
@@ -404,9 +431,10 @@ form input::placeholder{
     color: white;
     font-size: 24px;
     font-weight: 500;
-    padding-left: 30px;
 }
 form textarea{
+    box-sizing: border-box;
+    padding-left: 24px;
     margin-top: 10px;
     height: 240px;
     width: 640px;
@@ -439,4 +467,216 @@ footer .left .toTop{
     gap: 16px;
     display: flex;
     align-items: center;
+}
+.mobileIcon{
+    display: none;
+}
+@media (max-width: 800px) {
+    .container{
+        width: 100vw;
+    }
+    .mobileIcon{
+        display: block;
+    }
+    nav{
+        align-items: center;
+        width: 382px;
+        justify-content: space-between;
+    }
+    .main_nav{
+        display: none;
+    }
+    .hero_section{
+        width: 382px;
+        height: 572px;
+    }
+    .hero_text{
+        width: 100%;
+        font-size: 46px;
+        margin-top: 184px;
+    }
+    .hero_subtext, .section2_subtext{
+        width: 100%;
+        font-size: 16px;
+        margin-top: 24px;
+    }
+    .btn.main_cta{
+        margin-top: 40px;
+        width: 382px;
+        height: 56px;
+    }
+    .section2{
+        width: 382px;
+        height: 512px;
+    }
+    .section2_heading{
+        font-size: 24px;
+        margin-top: 80px;
+        width: 100%;
+    }
+    .section3{
+        width: 382px;
+        height: fit-content;
+    }  
+    .section3 h5{
+        margin: 0;
+        margin-top: 80px;
+        width: 100%;
+        text-align: center;
+    }
+    .card-container{
+        height: 2346px;
+    }
+    .card{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        height: 782px;
+    }
+    .txt_bx{
+        width: 382px;
+        height: 180px;
+        margin-top: 24px;   
+    }
+    .card .img_bx{
+        width: 382px;
+        height: 382px;
+        margin: 0;
+        margin-top: 24px;
+        min-width: 0;
+    } 
+    .card .img_bx img{
+        width: 296px;
+        height: 296px;
+    }
+    .card_title{
+        font-size: 24px;
+        width: 382px;
+    }
+    .card_p{
+        font-size: 16px;
+        width: 382px;
+        margin: 0;
+        margin-top: 24px;
+        color: rgba(250, 250, 250, 0.64);
+    }    
+    .slideshow_1, .slideshow_2{
+        width: 382px;
+        margin: 0 auto;
+    }
+    h5{
+        font-size: 12px;
+        text-align: center;
+    }
+    .section5{
+        width: 382px;
+        height: 1700px; 
+    }       
+    .section5 .PortfolioBox{
+        flex-direction: column;
+        width: 382px;
+        height: 520px;
+    }
+    .imgHolder img{
+        width: 100%;
+    }
+    .viewBehance{
+        margin-top: 16px;
+        width: 382px;
+        display: flex;
+        justify-content: space-between;
+        color: white;
+        align-items: center;
+    }
+    .viewBehance span{
+        font-size: 24px;
+    }
+    .viewBehance img{
+        width: 18px;
+        height: 18px;
+    }
+    .section6{
+        width: 382px;
+        height: 1326px;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .section6 img{
+        height: 382px;
+        width: 100%;
+        margin-top: 80px;    
+    }
+    .section5 h5{
+        margin: 0 auto 40px auto;
+    }
+    .section6 img{
+        margin-top: 160px;
+    }
+    .section6 form{
+        height: 1326px;
+        width: 382px;
+        margin-top: 40px;
+    }
+    .section6 form a{
+        margin: 0; 
+        margin-top: 10px;
+        width: 100%;
+    }
+    .viewBehance{
+        width: 382px;
+        display: flex;
+        justify-content: space-between;
+        color: white;
+        align-items: center;
+    }
+    .viewBehance img{
+        width: 18px;
+        height: 18px;
+    }
+    .section6 form h1{
+        height: 48px;
+        width: 382px;
+        font-size: 48px;
+        font-weight: 500;
+        line-height: 48px;
+        letter-spacing: 0em;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    
+    .section6 form input, .section6 form textarea{
+        width: 382px;
+        margin: 20px 0;
+    }
+    .section6 form input::placeholder, .section6 form textarea::placeholder{
+        font-size: 16px;
+    }
+    footer{
+        height: 200px;
+        width: 382px;
+        flex-direction: column-reverse;
+        justify-content: space-around;
+    }
+    footer .left{
+        flex-direction: column-reverse;
+        gap: 10px;
+    }
+    .left .logo{
+        margin: 0;
+    }
+    footer .left .toTop .optView{
+        display: block;
+    }
+    .services h5{
+        width: 382px;
+        margin: 0 auto;
+    }
+    .main_cta{
+        margin-top: 0;
+        height: 56px;
+    }
+    .slideshow_1, .slideshow_2{
+        font-size: 48px;
+    }
 }
